# myROS

./: README.md
kobuki_move_pkg/: CMakeLists.txt  package.xml
kobuki_move_pkg/src/: kobuki_motor.cpp  kobuki_navi.cpp
music/: Doxyfile  Makefile  README
music/src/: main.cpp
robocup_perception/: .CMakeLists.txt.swp  CMakeLists.txt  README.md  package.xml
robocup_perception/recog_file/: cifar10_quick.prototxt  cifar10_quick_iter_4000.caffemodel  mean.binaryproto
robocup_perception/script/: .cifar10_recognition.py.swp  cifar10_recognition.py  test_Client.py
robocup_perception/src/: image_object_detector.cpp  image_object_detector.cpp~  pcl_object_detector.cpp
robocup_perception/srv/: Classify.srv
robocup_perception/tmp/: surf.cpp  test_matcher.cpp
speech/: CMakeLists.txt  README  demo.jconf  demo_challenge.dict  filename  follow_me.dict  labo_open.dict  labo_open.jconf  package.xml
speech/src/: Sample.jconf  follow_me.dict  speech.cpp
